--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -24,11 +24,11 @@
         <a href="{% url 'about' %}">About</a>
     </header>-->
     <nav class="navbar navbar-expand-md navbar-light bg-dark ps-3">
-        <a href="#" class="navbar-brand"><i class="material-icons md-48 text-success">store</i></a>
+        <a href="{% url 'home' %}" class="navbar-brand"><i class="material-icons md-48 text-success">store</i></a>
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link text-light text-uppercase fw-bold" href="">Categories</a></li>
-            <li class="nav-item"><a class="nav-link text-light text-uppercase fw-bold" href="">Contacts</a></li>
-            <li class="nav-item"><a class="nav-link text-light text-uppercase fw-bold" href="">About</a></li>
+            <li class="nav-item"><a class="nav-link text-light text-uppercase fw-bold" href="#">Categories</a></li>
+            <li class="nav-item"><a class="nav-link text-light text-uppercase fw-bold" href="#">Contacts</a></li>
+            <li class="nav-item"><a class="nav-link text-light text-uppercase fw-bold" href="{% url 'about' %}">About</a></li>
         </ul>
     </nav>
 
