--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -27,26 +27,27 @@
 
 <div class="container">
     <div class="row">
-        {% for i in 'aaaaaaaa' %}
+        {% for product in products %}
             <div class="col-9 mx-auto col-md-6 col-lg-3">
                 <div class="card md-4 mb-3">
                     <div class="p-3">
-                        <img class="card-img-top" src="{% static 'images/beauty.png' %}">
+                        <a href="{{ product.get_url }}">
+                            <img class="card-img-top" alt="{{ product.name }}" src="{{ product.image.url }}">
+                        </a>
                     </div>
                     <div class="card-footer d-flex justify-content-between"
                          style="background: transparent; border-color: transparent;">
                         <p class="fw-bold mb-0">
-                            Beauty
+                            {{ product.name }}
                         </p>
                         <h5 class="text-info font-italic mb-0">
-                            $9.99
+                            {{ product.price }}
                         </h5>
                     </div>
                 </div>
             </div>
         {% endfor %}
     </div>
-
 </div>
 
 {% endblock %}
